# GameOfLife

./: CMakeLists.txt  GameOfLife.code-workspace  LICENSE  README.md  gmon.out
Documentation/Naieve-15 seconds/: GameOfLife
Documentation/Optimized-17secs-x100/: GameOfLife  gmon.out
RLE/: R-Pentomino.rle  R-Pentomino110.rle  R-Pentomino6.rle
include/: Board.h  CellMap.h  LifeSim.h  ParseRLE.h
src/: Board.cpp  CellMap.cpp  LifeSim.cpp  ParseRLE.cpp  main.cpp
